# computer-vision

./: .CMakeLists.txt.swp  .gitignore  CMakeLists.txt  CMakeLists.txt.save  Readme.md  a  aruco.cpp  aruco2.cpp  aruco3.cpp  arucoYT.cpp  autofocus.cpp  b.cpp  balance.cpp  belajarROI.cpp  belajarhsv.cpp  bola.cpp  bola.py  bolaCam.cpp  bolaCam.py  bolaWebCam.cpp  calib.cpp  cam_config.yaml  camera.cpp  coba.py  converter.py  distanceMeasure.cpp  doAnn.cpp  dropdoc.cpp  ekstrinsic.cpp  ektrak.cpp  exp.py  face.cpp  faceLand.cpp  faisalEkps.cpp  fps.cpp  gui.cpp  imgFaceL.cpp  inference.h  intrinsik.cpp  jk.cpp  (+49 more)
AmbilData/: yolo.cpp
RoiMeann/: coba.cpp
WarpPesefektif/: feature_matching.cpp  warp_doc.cpp
build4/: CMakeCache.txt  Makefile  cmake_install.cmake  main
build_3.4.14/: CMakeCache.txt  Makefile  cmake_install.cmake  main
folder/: CMakeLists.txt
